--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									<h2><a href="#">My name is Kevin Fu</a></h2>
 									<p>Data science graduate student with a passion in machine learning, but more importantly, a lifelong learner who believes in the power of daily compounding.</p>
 								</header>
-								<a href="https://github.com/LifeGains/MIDS_projects/blob/master/W261%20Final%20Project/W261%20Final%20Presentation%20PPT.pdf" class="image main"><img src="https://images.unsplash.com/photo-1556388158-158ea5ccacbd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="" /><br /><b>Project 1: Flight Delay Prediction</b></a>
+								<a href="https://github.com/LifeGains/MIDS_projects/blob/master/W261%20Final%20Project/W261%20Final%20Presentation%20PPT.pdf" class="image main"><img src="https://images.unsplash.com/photo-1556388158-158ea5ccacbd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="" /><br /><h2>Project 1: Flight Delay Prediction</h2></a>
 								<p>Accurately predict flight delays to decrease costs on both the airline side (financial) and the consumer side (time).</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W261%20Final%20Project/W261%20Final%20Presentation%20PPT.pdf" class="button large">Check it out</a></li>
@@ -62,7 +62,7 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pptx">Project 2<br />
+										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pptx">Project 2:<br />
 										Stock Prediction Models</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1612178991541-b48cc8e92a4d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjh8fHN0b2Nrc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=2000&q=60" alt="" /></a>
@@ -73,7 +73,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W203%20Final%20Presentation/Lab_2_Kevin_Fu_Ratan_Singh_Jamie_Smith_FINAL.pdf">Project 3<br />
+										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W203%20Final%20Presentation/Lab_2_Kevin_Fu_Ratan_Singh_Jamie_Smith_FINAL.pdf">Project 3:<br />
 										Impact of Patient Race vs. State Hospital’s Preparedness on COVID Mortality Rates</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1584036561566-baf8f5f1b144?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y292aWR8ZW58MHx8MHx8&auto=format&fit=crop&w=2000&q=60" alt="" /></a>
