--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">My name is Kevin Fu</a></h2>
-									<p>Data science graduate student with a passion in machine learning, but more importantly, a lifelong learner who believes in the power of daily compounding.</p>
+									<p>Analytically-minded Master of Information & Data Science prospective graduate with 5+ years of experience in finance (asset management, hedge funds). CFA charterholder. Looking for challenging opportunities that will utilize my AI/ML/Finance expertise.</p>
 								</header>
-								<a href="https://github.com/LifeGains/MIDS_projects/blob/master/W261%20Final%20Project/W261%20Final%20Presentation%20PPT.pdf" class="image main"><img src="https://images.unsplash.com/photo-1556388158-158ea5ccacbd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="" /><br /><h2>Project 1: Flight Delay Prediction</h2></a>
-								<p>Accurately predict flight delays to decrease costs on both the airline side (financial) and the consumer side (time).</p>
+								<a href="https://github.com/LifeGains/MIDS_projects/blob/master/W261%20Final%20Project/W261%20Final%20Presentation%20PPT.pdf" class="image main">
+									<img src="https://images.unsplash.com/photo-1556388158-158ea5ccacbd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="" /><br /><h2>Project 1: Flight Delay Prediction</h2></a>
+								<p>Predict flight delays to decrease explicit (financial) and implicit (time) costs for both airlines and consumers alike. Results/Model: 84% Recall, Random Forest (% of delayed flights that are correctly classified as delayed). Tools: Python / Databricks / Random Forest, GBT, Logistic Regression. </p>
 								<ul class="actions special">
 									<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W261%20Final%20Project/W261%20Final%20Presentation%20PPT.pdf" class="button large">Check it out</a></li>
 								</ul>
@@ -63,21 +64,43 @@
 								<article>
 									<header>
 										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pptx">Project 2:<br />
-										Stock Prediction Models</a></h2>
+										Stock Prediction Model</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1612178991541-b48cc8e92a4d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjh8fHN0b2Nrc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=2000&q=60" alt="" /></a>
-									<p>Maximize prediction accuracy and utility score (max return possible if model was 100% accurate).</p>
+									<p>Create a stock prediction model that maximizes both prediction accuracy and returns (“utility score”). Results/Model: 52% Accuracy, Naive Bayes, Highest utility score: Elastic Net. Tools: Python / GCP / Deep Learning (Convolutional Neural Networks, LSTM), K Means Clustering, PCA, Elastic Net, Naive Bayes</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pptx" class="button">Check it out</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W203%20Final%20Presentation/Lab_2_Kevin_Fu_Ratan_Singh_Jamie_Smith_FINAL.pdf">Project 3:<br />
+										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W266%20Final%20Project/W266%20Final%20Project%20Improving%20Reddit%20Post%20Classification%20via%20Deslanging.pdf">Project 3:<br />
+										Subreddit Classification</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1616509091215-57bbece93654?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80" alt="" /></a>
+									<p>Accurately classify slang-heavy social media posts (using NLP techniques) in order to attract higher ad spending. Hypothesis: Classification of deslanged social media posts will outperform those with slang/acronyms. Results/Model: 86% F1 Score, BERT Model. Tools: Python / Colab / Deep Learning (BERT, T5, Recurrent Neural Networks), Naive Bayes. </p>
+									<ul class="actions special">
+										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W266%20Final%20Project/W266%20Final%20Project%20Improving%20Reddit%20Post%20Classification%20via%20Deslanging.pdf" class="button">Check it out</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W281%20Final%20Project/W281%20Final%20Proj%20Writeup%20v2.pdf">Project 4:<br />
+										Image Classification</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1501621667575-af81f1f0bacc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="" /></a>
+									<p>Simulate computer vision by classifying 20 animal types (image processing/manipulation, feature engineering, machine learning). Combination of low amount of training data and compute resources yielded a low scoring model. Results/Model: 31% F1 Score, Support Vector Machines. Tools: Python / Colab / Deep Learning (Convolutional Neural Networks), Support Vector Machines, ResNet, PCA, T-SNE, Sobel, Harris Corners. </p>
+									<ul class="actions special">
+										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W281%20Final%20Project/W281%20Final%20Proj%20Writeup%20v2.pdf" class="button">Check it out</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W203%20Final%20Presentation/Lab_2_Kevin_Fu_Ratan_Singh_Jamie_Smith_FINAL.pdf">Project 5:<br />
 										Impact of Patient Race vs. State Hospital’s Preparedness on COVID Mortality Rates</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1584036561566-baf8f5f1b144?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y292aWR8ZW58MHx8MHx8&auto=format&fit=crop&w=2000&q=60" alt="" /></a>
-									<p>Determine the more significant variable between race and hospital preparedness in terms of COVID mortality rates.</p>
+									<p>Determine if race or hospital preparedness is more important with respect to mortality rates. Purpose: To fact check news reports stating that race was a significant factor. Results: State hospital preparedness held higher significance (higher coefficient value). Tools: R / R Studio / Linear & Logistic Regression. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W203%20Final%20Presentation/Lab_2_Kevin_Fu_Ratan_Singh_Jamie_Smith_FINAL.pdf" class="button">Check it out</a></li>
 									</ul>
