updated summary to bullets

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Kevin Fu: lifegains.github.io</title>
+		<title>Kevin Fu: My Portfolio | lifegains.github.io</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -49,7 +49,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">My name is Kevin Fu</a></h2>
-									<p>Analytically-minded Master of Information & Data Science prospective graduate with 5+ years of experience in finance (asset management, hedge funds). CFA charterholder. Looking for challenging opportunities that will utilize my AI/ML/Finance expertise.</p>
+									<p>&#8226; Analytically-minded Master of Information & Data Science prospective graduate with 5+ years of experience in finance (asset management, hedge funds). <br>&#8226; CFA charterholder. <br>&#8226; Looking for challenging opportunities that will utilize my AI/ML/Finance expertise.</p>
 								</header>
 								<a href="https://github.com/LifeGains/MIDS_projects/blob/master/W261%20Final%20Project/W261%20Final%20Presentation%20PPT.pdf" class="image main">
 									<img src="https://images.unsplash.com/photo-1556388158-158ea5ccacbd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="" /><br /><h2>Project 1: Flight Delay Prediction</h2></a>
