add social links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/kevinfu10/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/kevinfu10/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/LifeGains/MIDS_projects" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -48,8 +48,8 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">My name is Kevin Fu</a></h2>
-									<p>&#8226; Analytically-minded Master of Information & Data Science prospective graduate with 5+ years of experience in finance (asset management, hedge funds). <br>&#8226; CFA charterholder. <br>&#8226; Looking for challenging opportunities that will utilize my AI/ML/Finance expertise.</p>
+									<h2>My name is Kevin Fu</h2>
+								<p>Analytically-minded Master of Information & Data Science prospective graduate with 5+ years of experience in finance (asset management, hedge funds). CFA charterholder. Looking for challenging opportunities that will utilize my AI/ML/Finance expertise.</p>
 								</header>
 								<a href="https://github.com/LifeGains/MIDS_projects/blob/master/W261%20Final%20Project/W261%20Final%20Presentation%20PPT.pdf" class="image main">
 									<img src="https://images.unsplash.com/photo-1556388158-158ea5ccacbd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="" /><br /><h2>Project 1: Flight Delay Prediction</h2></a>
@@ -119,8 +119,8 @@
 							<section class="alt">
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/kevinfu10/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/LifeGains/MIDS_projects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
