--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pptx">Project 2:<br />
+										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pdf">Project 2:<br />
 										Stock Prediction Model</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1612178991541-b48cc8e92a4d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjh8fHN0b2Nrc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=2000&q=60" alt="" /></a>
 									<p>&#8226; Create a stock prediction model that maximizes both prediction accuracy and returns (“utility score”). <br>&#8226; <b>Results/Model</b>: 52% Accuracy, Naive Bayes, Highest utility score: Elastic Net. <br>&#8226; Tools: Python / GCP / Deep Learning (Convolutional Neural Networks, LSTM), K Means Clustering, PCA, Elastic Net, Naive Bayes</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pptx" class="button">Check it out</a></li>
+										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pdf" class="button">Check it out</a></li>
 									</ul>
 								</article>
 								<article>
