--- a/index.html
+++ b/index.html
@@ -49,18 +49,29 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>My name is Kevin Fu</h2>
-								<p>Analytically-minded Master of Information & Data Science prospective graduate with 5+ years of experience in finance (asset management, hedge funds). CFA charterholder. Looking for challenging opportunities that will utilize my AI/ML/Finance expertise.</p>
+								<p>Analytically-minded Master of Information & Data Science graduate with 5+ years of experience in finance (asset management, hedge funds). CFA charterholder. Looking for challenging opportunities that will utilize my AI/ML/Finance expertise.</p>
 								</header>
-								<a href="https://github.com/LifeGains/MIDS_projects/blob/master/W261%20Final%20Project/W261%20Final%20Presentation%20PPT.pdf" class="image main">
-									<img src="https://images.unsplash.com/photo-1556388158-158ea5ccacbd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="" /><br /><h2>Project 1: Flight Delay Prediction</h2></a>
-								<p>&#8226; Predict flight delays to decrease explicit (financial) and implicit (time) costs for both airlines and consumers alike. <br>&#8226; <b>Results/Model</b>: 84% Recall, Random Forest (% of delayed flights that are correctly classified as delayed). <br>&#8226; Tools: Python / Databricks / Random Forest, GBT, Logistic Regression. </p>
+								<a href="https://github.com/LifeGains/MIDS_projects/blob/master/W210%20Final%20Capstone%20Project/W210%20StockpickAI%20Final%20Presentation.pdf" class="image main">
+									<img src="https://images.unsplash.com/photo-1563986768711-b3bde3dc821e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=868&q=80" alt="" /><br /><h2>Project 1: StockPickAI</h2></a>
+								<p>&#8226; One of the first ML-based stock prediction models geared towards the Retail Investor. Monthly recommendation of 5 stocks that are most likely to outperform the S&P 500 over the next calendar year. <br>&#8226; Hal Varian Award Showcase Finalist <br>&#8226; <b>Results/Model</b>: 55-60% Accuracy: XGBoost / +19.9% annualized vs. +8.9% S&P 500 (2004-2022). <br>&#8226; Tools: Python, SQL / Amazon AWS (EC2, S3) / XGBoost, Random Forest. </p>	
 								<ul class="actions special">
-									<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W261%20Final%20Project/W261%20Final%20Presentation%20PPT.pdf" class="button large">Check it out</a></li>
+									<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W210%20Final%20Capstone%20Project/W210%20StockpickAI%20Final%20Presentation.pdf" class="button large">Github</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W261%20Final%20Project/W261%20Final%20Presentation%20PPT.pdf">Project 2:<br />
+										Flight Delay Prediction</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1556388158-158ea5ccacbd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="" /></a>
+									<p>&#8226; Predict flight delays to decrease explicit (financial) and implicit (time) costs for both airlines and consumers alike. <br>&#8226; <b>Results/Model</b>: 84% Recall, Random Forest (% of delayed flights that are correctly classified as delayed). <br>&#8226; Tools: Python / Databricks / Random Forest, GBT, Logistic Regression. </p>
+									<ul class="actions special">
+										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W261%20Final%20Project/W261%20Final%20Presentation%20PPT.pdf" class="button">Github</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pdf">Project 2:<br />
@@ -69,7 +80,7 @@
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1612178991541-b48cc8e92a4d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjh8fHN0b2Nrc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=2000&q=60" alt="" /></a>
 									<p>&#8226; Create a stock prediction model that maximizes both prediction accuracy and returns (“utility score”). <br>&#8226; <b>Results/Model</b>: 52% Accuracy, Naive Bayes, Highest utility score: Elastic Net. <br>&#8226; Tools: Python / GCP / Deep Learning (Convolutional Neural Networks, LSTM), K Means Clustering, PCA, Elastic Net, Naive Bayes</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pdf" class="button">Check it out</a></li>
+										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pdf" class="button">Github</a></li>
 									</ul>
 								</article>
 								<article>
@@ -80,7 +91,7 @@
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1616509091215-57bbece93654?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80" alt="" /></a>
 									<p>&#8226; Accurately classify slang-heavy social media posts (using NLP techniques) in order to attract higher ad spending. <br>&#8226; Hypothesis: Classification of deslanged social media posts will outperform those with slang/acronyms. <br>&#8226; <b>Results/Model</b>: 86% F1 Score, BERT Model. <br> Tools: Python / Colab / Deep Learning (BERT, T5, Recurrent Neural Networks), Naive Bayes. </p>
 									<ul class="actions special">
-										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W266%20Final%20Project/W266%20Final%20Project%20Improving%20Reddit%20Post%20Classification%20via%20Deslanging.pdf" class="button">Check it out</a></li>
+										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W266%20Final%20Project/W266%20Final%20Project%20Improving%20Reddit%20Post%20Classification%20via%20Deslanging.pdf" class="button">Github</a></li>
 									</ul>
 								</article>
 								<article>
@@ -91,7 +102,7 @@
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1501621667575-af81f1f0bacc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="" /></a>
 									<p>&#8226; Simulate computer vision by classifying 20 animal types (image processing/manipulation, feature engineering, machine learning). <br>&#8226; Combination of low amount of training data and compute resources yielded a low scoring model. <br>&#8226; <b>Results/Model</b>: 31% F1 Score, Support Vector Machines. <br>&#8226; Tools: Python / Colab / Deep Learning (Convolutional Neural Networks), Support Vector Machines, ResNet, PCA, T-SNE, Sobel, Harris Corners. </p>
 									<ul class="actions special">
-										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W281%20Final%20Project/W281%20Final%20Proj%20Writeup%20v2.pdf" class="button">Check it out</a></li>
+										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W281%20Final%20Project/W281%20Final%20Proj%20Writeup%20v2.pdf" class="button">Github</a></li>
 									</ul>
 								</article>
 								<article>
@@ -102,7 +113,7 @@
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1584036561566-baf8f5f1b144?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y292aWR8ZW58MHx8MHx8&auto=format&fit=crop&w=2000&q=60" alt="" /></a>
 									<p>&#8226; Determine if race or hospital preparedness is more important with respect to mortality rates. <br>&#8226; Purpose: To fact check news reports stating that race was a significant factor. <br>&#8226; <b>Results</b>: State hospital preparedness held higher significance (higher coefficient value). <br>&#8226; Tools: R / R Studio / Linear & Logistic Regression. </p>
 									<ul class="actions special">
-										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W203%20Final%20Presentation/Lab_2_Kevin_Fu_Ratan_Singh_Jamie_Smith_FINAL.pdf" class="button">Check it out</a></li>
+										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W203%20Final%20Presentation/Lab_2_Kevin_Fu_Ratan_Singh_Jamie_Smith_FINAL.pdf" class="button">Github</a></li>
 									</ul>
 								</article>
 							</section>
