Update project numbering

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</header>
 								<a href="https://github.com/LifeGains/MIDS_projects/blob/master/W210%20Final%20Capstone%20Project/W210%20StockpickAI%20Final%20Presentation.pdf" class="image main">
 									<img src="https://images.unsplash.com/photo-1563986768711-b3bde3dc821e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=868&q=80" alt="" /><br /><h2>Project 1: StockPickAI</h2></a>
-								<p>&#8226; One of the first ML-based stock prediction models geared towards the Retail Investor. Monthly recommendation of 5 stocks that are most likely to outperform the S&P 500 over the next calendar year. <br>&#8226; Hal Varian Award Showcase Finalist <br>&#8226; <b>Results/Model</b>: 55-60% Accuracy: XGBoost / +19.9% annualized vs. +8.9% S&P 500 (2004-2022). <br>&#8226; Tools: Python, SQL / Amazon AWS (EC2, S3) / XGBoost, Random Forest. </p>	
+								<p>&#8226; One of the first ML-based stock prediction models geared towards the Retail Investor. Monthly recommendation of 5 stocks that are most likely to outperform the S&P 500 over the next calendar year. <br>&#8226; <b>Hal Varian Award Showcase Finalist</b> <br>&#8226; <b>Results/Model</b>: 55-60% Accuracy: XGBoost / +19.9% annualized vs. +8.9% S&P 500 (2004-2022). <br>&#8226; Tools: Python, SQL / Amazon AWS (EC2, S3) / XGBoost, Random Forest. </p>	
 								<ul class="actions special">
 									<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W210%20Final%20Capstone%20Project/W210%20StockpickAI%20Final%20Presentation.pdf" class="button large">Github</a></li>
 								</ul>
@@ -74,7 +74,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pdf">Project 2:<br />
+										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pdf">Project 3:<br />
 										Stock Prediction Model</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1612178991541-b48cc8e92a4d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjh8fHN0b2Nrc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=2000&q=60" alt="" /></a>
@@ -85,7 +85,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W266%20Final%20Project/W266%20Final%20Project%20Improving%20Reddit%20Post%20Classification%20via%20Deslanging.pdf">Project 3:<br />
+										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W266%20Final%20Project/W266%20Final%20Project%20Improving%20Reddit%20Post%20Classification%20via%20Deslanging.pdf">Project 4:<br />
 										Subreddit Classification</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1616509091215-57bbece93654?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80" alt="" /></a>
@@ -96,7 +96,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W281%20Final%20Project/W281%20Final%20Proj%20Writeup%20v2.pdf">Project 4:<br />
+										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W281%20Final%20Project/W281%20Final%20Proj%20Writeup%20v2.pdf">Project 5:<br />
 										Image Classification</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1501621667575-af81f1f0bacc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="" /></a>
@@ -107,7 +107,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W203%20Final%20Presentation/Lab_2_Kevin_Fu_Ratan_Singh_Jamie_Smith_FINAL.pdf">Project 5:<br />
+										<h2><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W203%20Final%20Presentation/Lab_2_Kevin_Fu_Ratan_Singh_Jamie_Smith_FINAL.pdf">Project 6:<br />
 										Impact of Patient Race vs. State Hospital’s Preparedness on COVID Mortality Rates</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1584036561566-baf8f5f1b144?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y292aWR8ZW58MHx8MHx8&auto=format&fit=crop&w=2000&q=60" alt="" /></a>
