--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h2>My name is Kevin Fu</h2>
-								<p>Analytically-minded Master of Information & Data Science graduate with 5+ years of experience in finance (asset management, hedge funds). CFA charterholder. Looking for challenging opportunities that will utilize my AI/ML/Finance expertise.</p>
+								<p>Results-oriented data scientist with a MS in Data Science and 4+ years of experience in data analytics (hedge funds, investments). Eager to leverage my AI/Machine Learning & Finance expertise into predictive models that uncover actionable insights and spearhead high impact business decisions. An example of this is my Capstone project StockPickAI, which was selected as a Finalist for the Hal R. Varian Award at UC Berkeley.</p>
 								</header>
 								<a href="https://github.com/LifeGains/MIDS_projects/blob/master/W210%20Final%20Capstone%20Project/W210%20StockpickAI%20Final%20Presentation.pdf" class="image main">
 									<img src="https://images.unsplash.com/photo-1563986768711-b3bde3dc821e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=868&q=80" alt="" /><br /><h2>Project 1: StockPickAI</h2></a>
