--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										Stock Prediction Model</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1612178991541-b48cc8e92a4d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjh8fHN0b2Nrc3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=2000&q=60" alt="" /></a>
-									<p>&#8226; Create a stock prediction model that maximizes both prediction accuracy and returns (“utility score”). <br>&#8226; <b>Results/Model</b>: 52% Accuracy, Naive Bayes, Highest utility score: Elastic Net. <br>&#8226; Tools: Python / GCP / Deep Learning (Convolutional Neural Networks, LSTM), K Means Clustering, PCA, Elastic Net, Naive Bayes</p>
+									<p>&#8226; Created a stock prediction model that maximizes both prediction accuracy and returns (“utility score”). <br>&#8226; <b>Results/Model</b>: 52% Accuracy, Naive Bayes, Highest utility score: Elastic Net. <br>&#8226; Tools: Python / GCP / Deep Learning (Convolutional Neural Networks, LSTM), K Means Clustering, PCA, Elastic Net, Naive Bayes</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W207%20Final%20Presentation/W207%20Final%20Proj%20Presentation.pdf" class="button">Github</a></li>
 									</ul>
@@ -89,7 +89,7 @@
 										Subreddit Classification</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1616509091215-57bbece93654?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80" alt="" /></a>
-									<p>&#8226; Accurately classify slang-heavy social media posts (using NLP techniques) in order to attract higher ad spending. <br>&#8226; Hypothesis: Classification of deslanged social media posts will outperform those with slang/acronyms. <br>&#8226; <b>Results/Model</b>: 86% F1 Score, BERT Model. <br> Tools: Python / Colab / Deep Learning (BERT, T5, Recurrent Neural Networks), Naive Bayes. </p>
+									<p>&#8226; Accurately classify slang-heavy social media posts (using NLP techniques) in order to attract higher ad spending. <br>&#8226; Classification of deslanged social media posts likely to outperform those with slang/acronyms. <br>&#8226; <b>Results/Model</b>: 86% F1 Score, BERT Model. <br> Tools: Python / Colab / Deep Learning (BERT, T5, Recurrent Neural Networks), Naive Bayes. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W266%20Final%20Project/W266%20Final%20Project%20Improving%20Reddit%20Post%20Classification%20via%20Deslanging.pdf" class="button">Github</a></li>
 									</ul>
@@ -100,7 +100,7 @@
 										Image Classification</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1501621667575-af81f1f0bacc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="" /></a>
-									<p>&#8226; Simulate computer vision by classifying 20 animal types (image processing/manipulation, feature engineering, machine learning). <br>&#8226; Combination of low amount of training data and compute resources yielded a low scoring model. <br>&#8226; <b>Results/Model</b>: 31% F1 Score, Support Vector Machines. <br>&#8226; Tools: Python / Colab / Deep Learning (Convolutional Neural Networks), Support Vector Machines, ResNet, PCA, T-SNE, Sobel, Harris Corners. </p>
+									<p>&#8226; Created end-to-end computer vision solution that classifies 20 animal types with unstructured data. <br>&#8226; Combination of low amount of training data and compute resources yielded a low scoring model. <br>&#8226; <b>Results/Model</b>: 31% F1 Score, Support Vector Machines. <br>&#8226; Tools: Python / Colab / Deep Learning (Convolutional Neural Networks), Support Vector Machines, ResNet, PCA, T-SNE, Sobel, Harris Corners. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W281%20Final%20Project/W281%20Final%20Proj%20Writeup%20v2.pdf" class="button">Github</a></li>
 									</ul>
@@ -111,7 +111,7 @@
 										Impact of Patient Race vs. State Hospital’s Preparedness on COVID Mortality Rates</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="https://images.unsplash.com/photo-1584036561566-baf8f5f1b144?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y292aWR8ZW58MHx8MHx8&auto=format&fit=crop&w=2000&q=60" alt="" /></a>
-									<p>&#8226; Determine if race or hospital preparedness is more important with respect to mortality rates. <br>&#8226; Purpose: To fact check news reports stating that race was a significant factor. <br>&#8226; <b>Results</b>: State hospital preparedness held higher significance (higher coefficient value). <br>&#8226; Tools: R / R Studio / Linear & Logistic Regression. </p>
+									<p>&#8226; Determine if race or hospital preparedness was more important with respect to COVID mortality rates to help combat “fake news”. <br>&#8226; <b>Results</b>: State hospital preparedness held higher significance (higher coefficient value). <br>&#8226; Tools: R / R Studio / Linear & Logistic Regression. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/LifeGains/MIDS_projects/blob/master/W203%20Final%20Presentation/Lab_2_Kevin_Fu_Ratan_Singh_Jamie_Smith_FINAL.pdf" class="button">Github</a></li>
 									</ul>
